Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-44916

QScreen::availableGeometryChanged() signal reports wrong geometry on Android

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.5.0 Beta
    • 5.4.1
    • QPA
    • None
    • Android
    • 42a8613ffab6d966a88232e1535fbf386f0f96ea

    Description

      When connecting to the signal: QApplication::primaryScreen() - availableGeometryChanged(QRect)) on Android
      It seems that the wrong geometry is passed to the slot's QRect parameter.
      The geometry() is passed instead of availableGeometry(). Calling the QScreen methods directly returns the correct result.

      I have tested this on my Samsung Galaxy S2 and have uploaded the source code and log for the test app I used.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            srutledg Shawn Rutledge
            pcheeseman Peter Cheeseman
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes